force-app/main/default/objects/maps__ScheduledJob__c/maps__ScheduledJob__c.object-meta.xml
<CustomObject>
    <label>Maps Scheduled Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>