force-app/main/default/objects/maps__ScheduledJob__c/fields/maps__ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>maps__ApexClassName__c</fullName>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>