force-app/main/default/objects/maps__ScheduledJob__c/fields/maps__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Object</label>
    <referenceTo>maps__BaseObject__c</referenceTo>
    <relationshipLabel>Maps Scheduled Jobs</relationshipLabel>
    <relationshipName>ScheduledJobs</relationshipName>
    <type>Lookup</type>
</CustomField>