force-app/main/default/objects/maps__ScheduledJob__c/fields/maps__JobId__c.field-meta.xml
<CustomField>
    <fullName>maps__JobId__c</fullName>
    <label>JobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>